feat：完善springboot整合mybatis-plus使用例子

--- a/springboot-mybatisplus/src/main/resources/application.yml
+++ b/springboot-mybatisplus/src/main/resources/application.yml
@@ -1,6 +1,12 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://bigdata:3306/realtime?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+    url: jdbc:mysql://localhost:3306/realtime?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
     username: root
     password: root
+mybatis-plus:
+  configuration:
+    # 配置日志
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  # 配置xml文件路径
+  mapper-locations: classpath:czs/coding/mapper/xml/*.xml
