feat：添加springboot整合kafka使用例子

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>springboot-junit</module>
         <module>springboot-mybatisplus</module>
         <module>springboot-redis</module>
+        <module>springboot-kafka</module>
     </modules>
 
     <parent>
