--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>springboot-mybatisplus</module>
         <module>springboot-redis</module>
         <module>springboot-kafka</module>
+        <module>springboot-rabbitmq</module>
     </modules>
 
     <parent>
